reduce fuzzy-cmeans results, and move a great explanation to the results intro

--- a/work3/report/4-results-and-analysis/results-and-analysis.tex
+++ b/work3/report/4-results-and-analysis/results-and-analysis.tex
@@ -1,6 +1,15 @@
 \section{Results and Analysis}
 \label{sec:results-and-analysis}
 
+In the figures below, we present independent and interaction effects between
+key parameters of each clustering algorithm across three datasets:
+\textit{hepatitis}, \textit{mushroom}, and \textit{vowel}.
+Each grid combines boxplots and heatmaps; the boxplots demonstrate how individual
+parameters affect performance, while the heatmaps highlight synergistic effects between
+parameter pairs.
+
+Full results, in tabular and graphical form, are available in the appendix (Section~\ref{sec:appendix}).
+
 \input{4-results-and-analysis/1-kmeans-results}
 
 \input{4-results-and-analysis/2-improved-kmeans-results.tex}
