update appendix ordering

--- a/work3/report/6-appendix.tex
+++ b/work3/report/6-appendix.tex
@@ -3,42 +3,52 @@
 
 \input{tables/best_models_overall.tex}
 
-\begin{figure*}[ht!]
+\begin{figure*}[!htbp]
     \includegraphics[width=\textwidth]{figures/interactions_kmeans.png}
     \caption{Parameter interactions for KMeans}
     \label{fig:interactions_kmeans_full}
 \end{figure*}
 \input{tables/best_configs_kmeans_config.tex}
 \input{tables/best_configs_kmeans_performance.tex}
-\begin{figure*}[ht!]
+\FloatBarrier
+
+\begin{figure*}[!htbp]
     \includegraphics[width=\textwidth]{figures/interactions_gmeans.png}
     \caption{Parameter interactions for GMeans}
     \label{fig:interactions_gmeans_full}
 \end{figure*}
 \input{tables/best_configs_gmeans_config.tex}
 \input{tables/best_configs_gmeans_performance.tex}
-\begin{figure*}[ht!]
+\FloatBarrier
+
+\begin{figure*}[!htbp]
     \includegraphics[width=\textwidth]{figures/interactions_global_kmeans.png}
     \caption{Parameter interactions for Global KMeans}
     \label{fig:interactions_global_kmeans_full}
 \end{figure*}
 \input{tables/best_configs_global_kmeans_config.tex}
 \input{tables/best_configs_global_kmeans_performance.tex}
-\begin{figure*}[ht!]
+\FloatBarrier
+
+\begin{figure*}[!htbp]
     \includegraphics[width=\textwidth]{figures/interactions_fuzzy_cmeans.png}
     \caption{Parameter interactions for Fuzzy C-Means}
     \label{fig:interactions_fuzzy_cmeans_full}
 \end{figure*}
 \input{tables/best_configs_fuzzy_cmeans_config.tex}
 \input{tables/best_configs_fuzzy_cmeans_performance.tex}
-\begin{figure*}[ht!]
+\FloatBarrier
+
+\begin{figure*}[!htbp]
     \includegraphics[width=\textwidth]{figures/interactions_optics.png}
     \caption{Parameter interactions for OPTICS}
     \label{fig:interactions_optics_full}
 \end{figure*}
 \input{tables/best_configs_optics_config.tex}
 \input{tables/best_configs_optics_performance.tex}
-\begin{figure*}[ht!]
+\FloatBarrier
+
+\begin{figure*}[!htbp]
     \includegraphics[width=\textwidth]{figures/interactions_spectral_clustering.png}
     \caption{Parameter interactions for Spectral Clustering}
     \label{fig:interactions_spectral_clustering_full}
