--- a/work3/report/3-methods/2-improved-kmeans.tex
+++ b/work3/report/3-methods/2-improved-kmeans.tex
@@ -6,27 +6,25 @@ This section provides an overview of the improved K-Means algorithms implemented
 \subsubsection{Global K-Means}
 \label{subsec:globalkmeansdiscussion}
 
-The global K-Means algorithm is an advanced clustering approach that improves upon the
-traditional K-Means by introducing an intelligent centroid initialization and incremental clustering strategy.
-Our implementation focuses on addressing key limitations of standard clustering techniques
-through a novel candidate selection and optimization mechanism.
+The Global K-Means algorithm is an advanced clustering approach that improves upon the traditional K-Means by introducing an intelligent centroid initialization and incremental clustering strategy.
+Our implementation focuses on addressing key limitations of standard clustering techniques through a novel candidate selection and optimization mechanism.
 
 \subsubsection*{Mechanism}
 The Global K-Means algorithm operates through a progressive clustering process with several key improvements:
 
 The clustering process starts with a single cluster by using standard K-Means with \(k=1\), and incrementally adds clusters.
-For each iteration, the optimal location for the new centroid is determined by minimising the Within-Cluster Sum of Squares (WCSS).
+For each iteration, the optimal location for the new centroid is determined by minimizing the Within-Cluster Sum-of-Squares (WCSS).
 Candidate points for the new centroid are selected based on their minimum distance from existing centroids, with the
 number of candidates dynamically adjusted based on the current cluster count. An efficient selection method is
-used via \texttt{np.argpartition}, ensures scability.
+used via \texttt{np.argpartition}, ensuring scability.
 
-The algorithm refines centroid placement by using vecotorised WCSS computation, reducing the computational
+The algorithm refines centroid placement by using vecotorized WCSS computation, reducing the computational
 complexity of the algorithm by simultaneously calculating the WCSS for all candidates. The configuration with the lowest
 WCSS is selected as the optimal solution for the current cluster count.
 
 A unique aspect of this implementation is the caching mechanism. Intermediate results such as cluster labels, centroids, and
 distance matrices are stored persistently. This allows the algorithm to resume from cached states for higher values of \(k\),
-thus reducing computational overhead dramatically by preventing recomputations of lower values of \(k\).
+thus reducing computational overhead dramatically by preventing re-computations of lower values of \(k\).
 The caching mechanism is hash-based, ensuring compatibility with different datasets and configurations.
 
 The implementation also includes an adaptive candidate reduction strategy. As the number of clusters increases, the number of candidate
@@ -66,19 +64,19 @@ Random State & [1, 2, 3, 4, 5] \\ \hline
 
 The G-Means algorithm is an advanced clustering techniques that improves upon the standard K-Means algorithm by addressing
 a fundamental limitation: the need to specify a predetermined number of clusters.
-G-Means dynamically determines the optimal number of clusters by recursively splitting clusters based on 
-statistically validating their Gaussian distribution.
+G-Means dynamically determines the optimal number of clusters by recursively splitting clusters based on the
+statistical validation of their Gaussian distribution.
 
 \subsubsection*{Mechanism}
 
-The algorithm begins the clustering process by initialising a single cluster, obtained using standard K-Means with \(k=1\).
-For each cluster, the data points are split into two subclusters by applying K-Means with \(k=2\).
+The algorithm begins the clustering process by initializing a single cluster, obtained using standard K-Means with \(k=1\).
+For each cluster, the data points are split into two sub-clusters by applying K-Means with \(k=2\).
 The resulting clusters are then evaluated using Anderson-Darling Gaussianity test. This test evaluates whether the data points in the cluster
-are Gaussian distributed. 
+are Gaussian distributed.
 
-If the test indicates both subclusters are Gaussian distributed, the split is rejected and the original cluster remains unchanged.
-If at least one of the subclusters are not Gaussian distributed, the split is accepted and the process is repeated recursively for each subcluster
-until all clusters are Gaussian distributed, or the user-defined maximum depth is reached.
+If the test indicates both sub-clusters have a Gaussian distribution, the split is rejected and the original cluster remains unchanged.
+If at least one of the sub-clusters are not of Gaussian distribution, the split is accepted and the process is repeated recursively for each sub-cluster
+until all clusters are of Gaussian distribution, or the user-defined maximum depth is reached.
 
 Before applying the Gaussianity test, the algorithm projects the data onto the principal components using Principal Component
 Analysis (PCA) to ensure the Anderson-Darling test is applied to the most significant directions in the data.
