--- a/work3/report/references.bib
+++ b/work3/report/references.bib
@@ -213,3 +213,17 @@ keywords = {cluster analysis, database mining, visualization}
   pages={2825--2830},
   year={2011}
 }
+
+@article{global_kmeans,
+  author = {Artistidis Likas, Nikos Vlassis, Jakob J. Verbeek},
+  title = {The Global k-Means Clustering Algorithm},
+  volume = {12},
+  year = {2001}
+}
+
+@article{gmeans,
+  author = {Greg Hamerly, Charles Elkan},
+  title = {Learning the k in k-means},
+  volume = {27},
+  year = {2003}
+}
