summary plot added

--- a/work3/report/4-results-and-analysis/6-summary.tex
+++ b/work3/report/4-results-and-analysis/6-summary.tex
@@ -1,6 +1,13 @@
 \subsection{Summary}
 \label{subsec:resultssummary}
 
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.5\textwidth]{figures/model_comparison_f_measure.png}
+    \caption{F1 Score Comparison Across Datasets}
+    \label{fig:interactions-global-kmeans}
+\end{figure}
+
 The Mushroom dataset, with its simple two-class structure, was best handled by K-Means,
 Spectral Clustering, and Fuzzy C-Means. K-Means and Spectral Clustering achieved high F1 
 scores when the cluster counts matched the natural class count. Fuzzy C-Means maintained
