--- a/work3/report/5-conclusion.tex
+++ b/work3/report/5-conclusion.tex
@@ -4,22 +4,22 @@
 \subsection{Key Findings}
 
 \begin{itemize}
-    \item K-means demonstrated consistent performance with moderate execution times (0.03-0.07s) and balanced clustering metrics
-    \item Fuzzy C-means showed particularly strong performance on the hepatitis dataset, achieving high ARI scores (0.14-0.17) for lower cluster numbers
-    \item Global K-means exhibited longer execution times but provided more stable clustering than K-means results across different initializations
+    \item K-means demonstrated consistent performance with moderate execution times (0.003-0.38s) and balanced clustering metrics
+    \item Fuzzy C-means showed particularly fast runtimes even on the largest dataset (mushroom), while offering similar performance to K-means
+    \item Global K-means exhibited longer execution times but provided more stable clustering than K-means results across different random initializations
     \item Gmeans did not demonstrate competitive results generally, but exhibited decent F1 scores on the vowel dataset
     \item OPTICS generally showed weak performance, probably due to the lack of natural density variations in the datasets
-    \item Spectral clustering performed well with nearest-neighbors affinity, especially on the vowel dataset, achieving competitive ARI scores
+    \item Spectral clustering performed well with nearest-neighbors affinity, especially on the vowel dataset, achieving the best F1 score on this difficult-to-cluster dataset
 \end{itemize}
 
 \subsection{Practical Implications}
 
 \begin{itemize}
     \item For well-separated clusters: K-means offers the best balance of speed and accuracy
-    \item For overlapping clusters: Fuzzy C-means provides more nuanced cluster assignments
-    \item For datasets with varying densities: OPTICS or Spectral clustering are more suitable
-    \item When cluster number is unknown: Mean Shift or OPTICS are preferable
-    \item When stability is crucial: Global K-means offers more consistent results
+    \item For overlapping clusters: Fuzzy C-means provides more nuanced cluster assignments, and it's faster than K-means
+    \item For datasets with varying densities and non-convex shapes: OPTICS or Spectral clustering are more suitable
+    \item When cluster number is unknown: Gmeans, Fuzzy C-means, OPTICS or Spectral clustering are preferable
+    \item When stability is crucial: Global K-means offers more consistent results, at the cost of longer runtimes
 \end{itemize}
 
 \subsection{Limitations and Future Work}
@@ -27,7 +27,6 @@
 \begin{itemize}
     \item Current analysis is limited to specific parameter ranges and could be expanded
     \item Computational efficiency could be improved, particularly for Global K-means and OPTICS
-    \item The impact of data preprocessing and normalization needs further investigation
     \item Integration of multiple algorithms in an ensemble approach could potentially yield better results
 \end{itemize}
 
