data preprocessing reduction

--- a/work3/report/4-results-and-analysis/3-fuzzy-cmeans-results.tex
+++ b/work3/report/4-results-and-analysis/3-fuzzy-cmeans-results.tex
@@ -16,5 +16,5 @@ The heatmaps reveal nuanced interactions between $n\_clusters$ and the fuzziness
 
 Overall, the results highlight the importance of dataset-specific tuning of Fuzzy C-Means parameters. The \textit{hepatitis} dataset favors simple models with low fuzziness and fewer clusters, while the \textit{vowel} dataset benefits from greater complexity in terms of both parameters. The \textit{mushroom} dataset demonstrates robustness across a wider range of parameter combinations, underscoring its relative insensitivity to these hyperparameters.
 
-These findings emphasize the need for careful hyperparameter optimization and underscore the variability of clustering behavior across datasets with differing characteristics.
+% These findings emphasize the need for careful hyperparameter optimization and underscore the variability of clustering behavior across datasets with differing characteristics.
 
