update order of methods to be consistent in introduction

--- a/work3/report/1-introduction.tex
+++ b/work3/report/1-introduction.tex
@@ -2,4 +2,4 @@
 \label{sec:introduction}
 
 
-This report focuses on evaluating various clustering techniques across three distinct datasets: Mushroom, Vowel, and Hepatitis, as detailed in Section \ref{sec:data}. The clustering algorithms examined include K-Means, Fuzzy C-Means, OPTICS, Spectral Clustering, Global K-Means, and G-Means, as described in Sections \ref{subsec:methods-kmeans} to \ref{subsec:methods-spectral-clustering} . We perform multiple experimental runs with different hyperparameters and assess the performance of each method using four evaluation metrics: two internal metrics (Davies-Bouldin Index and Calinski-Harabasz Index) and two external metrics (Adjusted Rand Index and F-Measure) as seen in \ref{subsec:methods-evaluation-metrics}. The results and analysis of these experiments are presented in Section \ref{sec:results-and-analysis}.
+This report focuses on evaluating various clustering techniques across three distinct datasets: Mushroom, Vowel, and Hepatitis, as detailed in Section \ref{sec:data}. The clustering algorithms examined include K-Means, Fuzzy C-Means, Global K-Means, G-Means, OPTICS, and Spectral Clustering, as described in Sections \ref{subsec:methods-kmeans} to \ref{subsec:methods-spectral-clustering} . We perform multiple experimental runs with different hyperparameters and assess the performance of each method using four evaluation metrics: two internal metrics (Davies-Bouldin Index and Calinski-Harabasz Index) and two external metrics (Adjusted Rand Index and F-Measure) as seen in \ref{subsec:methods-evaluation-metrics}. The results and analysis of these experiments are presented in Section \ref{sec:results-and-analysis}.
