arrange appendix more consistently

--- a/work3/report/6-appendix.tex
+++ b/work3/report/6-appendix.tex
@@ -2,6 +2,7 @@
 \label{sec:appendix}
 
 \input{tables/best_models_overall.tex}
+\clearpage
 
 \begin{figure*}[!htbp]
     \includegraphics[width=\textwidth]{figures/interactions_kmeans.png}
