rearrange dataset mentions to be alphabetical and consistent

--- a/work3/report/2-data/1-dataset.tex
+++ b/work3/report/2-data/1-dataset.tex
@@ -35,9 +35,9 @@ Class distribution was another consideration. Although clustering is unsupervise
 
 \subsection{Dataset Characteristics}
 
-The Mushroom dataset consists of 8,124 instances with 22 nominal attributes. It represents a binary classification problem (edible vs. poisonous) with nearly balanced classes and contains no missing values. 
-
 The Hepatitis dataset includes 155 instances with a mix of 13 nominal and 6 numerical attributes. It represents a binary classification problem (survive vs. die), but the classes are imbalanced, with the majority class comprising 79.35\% of the instances. Approximately 6.01\% of the values are missing. 
+
+The Mushroom dataset consists of 8,124 instances with 22 nominal attributes. It represents a binary classification problem (edible vs. poisonous) with nearly balanced classes and contains no missing values. 
 
 The Vowel dataset contains 990 instances with 3 nominal and 10 numerical attributes. It represents a multi-class classification problem with 11 balanced classes and no missing values. 
 
@@ -90,7 +90,7 @@ The Vowel dataset contains 990 instances with 3 nominal and 10 numerical attribu
 % \end{itemize}
 
 \subsection{Selection Criteria}
-We selected the Mushroom, Hepatitis, and Vowel datasets to provide complementary characteristics for evaluating clustering algorithms. Our selection criteria focused on:
+We selected the Hepatitis, Mushroom, and Vowel datasets to provide complementary characteristics for evaluating clustering algorithms. Our selection criteria focused on:
 
 \begin{itemize}
     \item \textbf{Dataset size variation} (small, medium, large)
