--- a/work3/report/report.tex
+++ b/work3/report/report.tex
@@ -1,4 +1,4 @@
-\documentclass[titlepage, twocolumn]{article}
+\documentclass[titlepage, twocolumn, a4paper]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[margin=0.6in]{geometry}
 \usepackage{booktabs}
