add other summar plots

--- a/work3/report/4-results-and-analysis/6-summary.tex
+++ b/work3/report/4-results-and-analysis/6-summary.tex
@@ -1,11 +1,32 @@
 \subsection{Summary}
 \label{subsec:resultssummary}
 
-\begin{figure}[h!]
+\begin{figure}[ht!]
     \centering
-    \includegraphics[width=0.5\textwidth]{figures/model_comparison_f_measure.png}
+    \includegraphics[width=0.4\textwidth]{figures/model_comparison_f_measure.png}
     \caption{F1 Score Comparison Across Datasets}
     \label{fig:model_comparison_f_measure}
+\end{figure}
+
+\begin{figure}[ht!]
+    \centering
+    \includegraphics[width=0.4\textwidth]{figures/model_comparison_ari.png}
+    \caption{ARI Comparison Across Datasets}
+    \label{fig:model_comparison_ari}
+\end{figure}
+
+\begin{figure}[ht!]
+    \centering
+    \includegraphics[width=0.4\textwidth]{figures/model_comparison_chi.png}
+    \caption{Calinski-Harabasz Index Across Datasets}
+    \label{fig:model_comparison_chi}
+\end{figure}
+
+\begin{figure}[htb!]
+    \centering
+    \includegraphics[width=0.4\textwidth]{figures/model_comparison_dbi.png}
+    \caption{Davies-Bouldin Index Across Datasets (lower is better)}
+    \label{fig:model_comparison_dbi}
 \end{figure}
 
 The Mushroom dataset, with its simple two-class structure, was best handled by K-Means,
