--- a/work3/report/6-appendix.tex
+++ b/work3/report/6-appendix.tex
@@ -2,6 +2,33 @@
 \label{sec:appendix}
 
 \input{tables/best_models_overall.tex}
+\begin{figure*}[ht!]
+    \centering
+    \includegraphics[width=\textwidth]{figures/model_comparison_f_measure.png}
+    \caption{F1 Score Comparison Across Datasets}
+    \label{fig:model_comparison_f_measure_full}
+\end{figure*}
+
+\begin{figure*}[ht!]
+    \centering
+    \includegraphics[width=\textwidth]{figures/model_comparison_ari.png}
+    \caption{ARI Comparison Across Datasets}
+    \label{fig:model_comparison_ari_full}
+\end{figure*}
+
+\begin{figure*}[ht!]
+    \centering
+    \includegraphics[width=\textwidth]{figures/model_comparison_chi.png}
+    \caption{Calinski-Harabasz Index Across Datasets}
+    \label{fig:model_comparison_chi_full}
+\end{figure*}
+
+\begin{figure*}[htb!]
+    \centering
+    \includegraphics[width=\textwidth]{figures/model_comparison_dbi.png}
+    \caption{Davies-Bouldin Index Across Datasets (lower is better)}
+    \label{fig:model_comparison_dbi_full}
+\end{figure*}
 \clearpage
 
 \begin{figure*}[!htbp]
