--- a/work3/report/4-results-and-analysis/6-summary.tex
+++ b/work3/report/4-results-and-analysis/6-summary.tex
@@ -17,7 +17,7 @@ methods like G-Means and OPTICS added no benefit.
 The Hepatitis dataset, with moderate complexity and imbalanced classes, showed mixed results.
 K-Means and Global K-Means performed well when clusters aligned with the natural classes. 
 OPTICS and Fuzzy C-Means succeeded with careful tuning, with OPTICS favoring larger clusters and Fuzzy C-Means performing better with lower fuzziness values.
-G-Means, however, exhibited instability due to sensitivity to hyperparameters like $max_depth$ and strictness.
+G-Means, however, exhibited instability due to sensitivity to hyperparameters like $max\_depth$ and strictness.
 
 The Vowel dataset, characterized by high-class complexity and overlapping 
 features, posed significant challenges. All algorithms struggled, with low F1 
