--- a/work3/report/4-results-and-analysis/2-improved-kmeans-results.tex
+++ b/work3/report/4-results-and-analysis/2-improved-kmeans-results.tex
@@ -42,19 +42,19 @@ Compared to Global K-Means, the results are more varied for G-Means as shown in 
 
 The F1 score for the Mushroom dataset remains consistently low across all configurations of the hyperparameters.
 While there are some outliers, the overall clustering performance is poor, with F1 scores close to zero for most parameter combinations.
-The heatmaps show little variation across hyperparameter values, suggesting that changes to $max_depth$, strictness, or $min_obs$ have
-negligible impact on the clustering outcome. The bar plot for $random_state$ indicates some sensitivity to initialization, but even
+The heatmaps show little variation across hyperparameter values, suggesting that changes to $max\_depth$, strictness, or $min\_obs$ have
+negligible impact on the clustering outcome. The bar plot for $random\_state$ indicates some sensitivity to initialization, but even
 the best cases fail to produce meaningful clusters. These results suggest that G-Means is ill-suited for the Mushroom dataset.
 
 For the Hepatitis dataset, the F1 score shows greater variability across hyperparameter configurations. The heatmaps reveal that
-$max_depth$ and $random_state$ have more noticeable impacts on clustering performance, with specific combinations producing
-better results. The box plots indicate significant outliers, particularly for strictness and $max_depth$, suggesting these parameters
+$max\_depth$ and $random\_state$ have more noticeable impacts on clustering performance, with specific combinations producing
+better results. The box plots indicate significant outliers, particularly for strictness and $max\_depth$, suggesting these parameters
 introduce instability. Overall, these results show G-Means hyperparameter combinations are sensitive for this dataset,
 highlighting the need for careful selection to optimize performance. Despite this, the F1 scores remain low, indicating G-Means
 cannot accurately predict the clusters in the Hepatitis dataset.
 
 The F1 score remains consistently low across all hyperparameter configurations for the Vowel dataset.
-The heatmaps suggest that $max_depth$ is the most significant hyperparameter, with lower levels producing the best results.
+The heatmaps suggest that $max\_depth$ is the most significant hyperparameter, with lower levels producing the best results.
 Having said this, the results are still poor. The box plots show negligible variability for most parameters, with no significant outliers.
 These results indicate that G-Means struggles to produce meaningful clusters for this dataset,
 likely due to the dataset's complexity and the algorithm's limitations in handling high-class scenarios.
