--- a/work4/notes/2024-12-17.md
+++ b/work4/notes/2024-12-17.md
@@ -7,3 +7,7 @@
 - [ ] set due dates
 ## all tasks
 [TODO.md](TODO.md)
+
+## help session
+2024-12-21 (Friday) 11:00a->12:00p
+message and join a call
