update to be titled subsections

--- a/work4/notes/2024-12-20.md
+++ b/work4/notes/2024-12-20.md
@@ -20,8 +20,8 @@
 ## Explanation of the report structure
 P: paragraphs
     - e.g. `\paragraph{Dimensionality reduction}`
-1: sections
-    - e.g. `\section{PCA vs scikit PCA}`
+1: subsections
+    - e.g. `\subsection{PCA vs scikit PCA}`
 
 
 1. Abstract
