configure report structure

--- a/work4/report/report.tex
+++ b/work4/report/report.tex
@@ -22,9 +22,9 @@
 \maketitle
 
 \newpage
-\input{1-introduction}
-\input{2-data/data}
-\input{3-methods/methods}
+\input{1-abstract}
+\input{2-background-and-related-work}
+\input{3-methods}
 \input{4-results-and-analysis/results-and-analysis}
 \input{5-conclusion}
 % \newpage
