fill methods section

--- a/work4/report/references.bib
+++ b/work4/report/references.bib
@@ -136,3 +136,10 @@ keywords = {cluster analysis, database mining, visualization}
   volume = {27},
   year = {2003}
 }
+
+@article{our-clustering-work,
+    title={Implementation, Evaluation, and Comparison of K-Means and Other Clustering Algorithms},
+    author={Jim\'{e}nez, Carlos and Lang, Sheena and Parent, Zachary and Poniatowski, Kacper},
+    year={2024},
+    institution={Universitat Politècnica de Catalunya}
+}
