--- a/work4/report/report.tex
+++ b/work4/report/report.tex
@@ -10,8 +10,7 @@
 \usepackage{tabularx}
 \usepackage{placeins}
 
-% TODO: Add bibliography
-% \bibliographystyle{plain}
+\bibliographystyle{plain}
 
 \title{Work 4}
 \author{Carlos Jiménez, Sheena Lang, Zachary Parent, and Kacper Poniatowski}
@@ -27,8 +26,8 @@
 \input{3-methods}
 \input{4-results-and-analysis/results-and-analysis}
 \input{5-conclusion}
-% \newpage
-% \bibliography{references}
-% \newpage
+\newpage
+\bibliography{references}
+\newpage
 \input{6-appendix}
 \end{document}
