initial work + notes done for report: clustering with reduction vs no

--- a/work4/report/4-results-and-analysis/2-clustering-with-reduction-vs-without.tex
+++ b/work4/report/4-results-and-analysis/2-clustering-with-reduction-vs-without.tex
@@ -1,3 +1,24 @@
 \subsection{Clustering with reduction vs without}
 \label{subsec:clustering-with-reduction-vs-without}
 
+This section analyses the performance of the clustering algorithms with and without reductions of the feature space.
+As mentioned previously in the report, the reductions of the feature space is done by applying different
+implementations of PCA. The PCA implementations are the following:
+
+\begin{itemize}
+    \item PCA via SKLearn
+    \item Our own implementation of PCA
+    \item Kernel PCA via SKLearn
+\end{itemize}
+
+% Highlight differences in clustering between the PCA implementations and also to no-PCA
+% Examine if the PCA implementations are able to reduce the feature space effectively and improve the clustering performance
+
+% Compare if PCA's have impact on accuracy and efficiency
+
+% If possible, show potential impact on runtime and memory usage
+
+% IF SPACE ALLOWS, mention future experiments on parameter tuning for PCA
+
+
+
